# coin-collection-app

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .scribe-commit-msg.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  Taskfile.yml  docker-compose.yaml  instructions.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  docker-publish-beta.yml  docker-publish.yml  security-scan.yml  squad-heartbeat.yml  squad-issue-assign.yml  squad-triage.yml  sync-squad-labels.yml
.specify/memory/: constitution.md
.squad/: decisions.md
docs/: ARCHITECTURE.md  CHANGELOG.md  SDD.md  api-reference.md  authentication.md  deployment.md  features.md  getting-started.md  incident-response.md  oidc-setup.md  openapi.json  plan.md  pwa-guide.md  references.md  security-analysis.md  security-principles.md  social-feature.md  testing.md  threat-model.md
docs/features/: INDEX.md  wish-list.md  (+4 more)
src/agent/: .gitignore  Dockerfile  README.md  pyproject.toml
src/agent/app/: config.py  logging_config.py  main.py  routes.py  streaming.py  supervisor.py
src/agent/app/llm/: provider.py
src/agent/app/models/: requests.py  responses.py
src/agent/app/teams/: auction_search.py  availability_check.py  coin_analysis.py  coin_grading.py  coin_intake.py  coin_search.py  coin_shows.py  collection_chat.py  gap_analysis.py  photo_guide.py  portfolio_review.py  price_trends.py  similar_lots.py
src/agent/app/tools/: collection_tools.py  numisbids.py  search.py
src/agent/tests/: test_alert_discovery_contract.py  test_alert_discovery_route.py  test_api.py  test_availability.py  test_models.py  test_outbound_validation.py  test_retry.py  test_streaming.py  test_supervisor_coin_shows_location.py  test_supervisor_grading_routing.py
(+407 files in other folders)
