[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ancient-coins-agent"
version = "0.1.0"
description = "Multi-agent LangGraph service for Ancient Coins app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.49.0,<1.0",
    "langgraph>=0.4.0,<2.0",
    "langchain>=1.3.11,<2.0",
    "langchain-anthropic>=0.3.0,<2.0",
    "langchain-ollama>=0.3.0,<2.0",
    "langchain-community>=0.3.0,<0.5",
    "httpx>=0.28.0,<1.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
    "sse-starlette>=3.4.5,<4.0",
    "tenacity>=9.0.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pip-audit>=2.9.0,<3.0",
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.25.0,<2.0",
    "ruff>=0.15.19,<1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
